# repo-context-engine

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.egce/: .gitignore  config.yaml
.egce/context/: api-contracts.md  architecture.md  conventions.md  data-models.md  modules.md
docs/: v0.2-plan.md
examples/: demo.py  demo_fastapi.py  demo_improved.py  quickstart.py
src/egce/: __init__.py  cli.py  compress.py  mcp_server.py  packer.py  repo_map.py  retrieve.py  spec.py  telemetry.py  verify.py  workspace.py
src/egce/extractors/: __init__.py  base.py  django_ext.py  express_ext.py  fastapi_ext.py  react_ext.py  vue_ext.py
templates/: AGENTS.md  CLAUDE.md  README.md  claude-settings-snippet.json  global-claude-md.md
tests/: test_core.py  test_e2e.py  test_retrieve_compress.py  test_spec_telemetry.py  test_v02.py
